--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.72'
     ext {
         androidPluginVersion = '3.2.1'
         //sdk and tools
@@ -18,6 +19,8 @@ buildscript {
         dagger = '2.16'
         glide = '4.8.0'
         okhttp = '3.10.0'
+        room_version = "2.2.5"
+        kotlin_version = '1.2.60'
     }
 
     repositories {
@@ -32,8 +35,26 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
-
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.android.support'
+                    && !details.requested.name.contains('multidex') ) {
+                details.useVersion "version which should be used - in your case 26.0.0-beta2"
+            }
+            if (details.requested.group == 'androidx.versionedparcelable') {
+                details.useVersion "1.0.0"
+            }
+            if (details.requested.group == 'androidx.core') {
+                details.useVersion "1.0.0"
+            }
+        }
+    }
+}
 allprojects {
+    configurations.all {
+        resolutionStrategy.force "com.google.android.gms:play-services-tasks:15.0.1"
+    }
     repositories {
         google()
         jcenter()
