--- a/features/database/src/main/AndroidManifest.xml
+++ b/features/database/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.vp.database">
+<manifest package="com.vp.database">
 
     /
 </manifest>
