--- a/features/favorites/build.gradle
+++ b/features/favorites/build.gradle
@@ -41,12 +41,16 @@ android {
 
 dependencies {
     implementation project(':features:database')
+    implementation project(':dagger.addons')
     implementation project(':features:list')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
     kapt "com.github.bumptech.glide:compiler:$rootProject.glide"
+
+    //architecture components
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle"
 
     //db
     implementation "androidx.room:room-runtime:$room_version"
@@ -64,6 +68,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    //dagger
+    implementation "com.google.dagger:dagger:$rootProject.dagger"
+    kapt "com.google.dagger:dagger-compiler:$rootProject.dagger"
+    implementation "com.google.dagger:dagger-android:$rootProject.dagger"
+    implementation("com.google.dagger:dagger-android-support:$rootProject.dagger")
+    kapt "com.google.dagger:dagger-android-processor:$rootProject.dagger"
 }
 repositories {
     mavenCentral()
